--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  cloud_firestore: ^0.13.7
   firebase_auth: ^0.16.1
   flutter_bloc: ^4.0.0
   bloc: ^4.0.0
